<resources>
    <string name="app_name">PCI</string>
    <string name="text_pattern_ok">OK</string>
    <string name="text_pattern_cancel">CANCELAR</string>
    <string name="text_number_1">1</string>
    <string name="text_number_2">2</string>
    <string name="text_number_3">3</string>
    <string name="text_number_4">4</string>
    <string name="text_number_5">5</string>
    <string name="text_number_6">6</string>
...
    <string name="text_comma">,</string>
    <string name="text_pattern_clean">APAGAR</string>
    <string name="text_pattern_update">ATUALIZAR DADOS</string>
    <string name="text_failure">FALHA INESPERADA NO APLICATIVO! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_blocked_access_app">ACESSO NEGADO! POR FAVOR, CONFIGURE O APLICATIVO ANTES DO USO DO MESMO!</string>
    <string name="text_title_initial_menu">MENU INICIAL - V %1$s</string>
    <string name="text_item_note">APONTAMENTO</string>
    <string name="text_item_config">CONFIGURAÇÃO</string>
    <string name="text_item_out">SAIR</string>
    <string name="text_title_password">SENHA</string>
    <string name="text_password_invalid">SENHA INVÁLIDA!</string>
    <string name="text_title_config">CONFIGURAÇÃO</string>
    <string name="text_number">NRO APARELHO</string>
    <string name="text_pattern_save">SALVAR</string>
    <string name="text_msg_recovery">Recuperando dados da tabela \"%1$s\" do Web Service.</string>
...
    <string name="text_update_failure">FALHA DE ATUALIZAÇÃO DE DADOS! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_config_success">CONFIGURAÇÃO REALIZADA COM SUCESSO!</string>
    <string name="text_title_colab">MATRICULA COLABORADOR</string>
    <string name="text_field_empty">CAMPO VAZIO! POR FAVOR, PREENCHA O CAMPO \"%1$s\" PARA DAR CONTINUIDADE AO APONTAMENTO.</string>
    <string name="text_input_data_non_existent">\"%1$s\" INEXISTENTE! POR FAVOR, VERIFIQUE SE O CAMPO FOI DIGITADO CORRETAMENTE.</string>
    <string name="text_check_data">CHECANDO \"%1$s\" NO WEB SERVICE</string>
    <string name="text_pattern_return">RETORNAR</string>
    <string name="text_title_os">ORDEM(S) SERVIÇO(S)</string>
    <string name="text_question_update">DESEJA REALMENTE ATUALIZAR BASE DE DADOS?</string>
    <string name="text_title_plant">PLANTA(S)</string>
    <string name="text_title_list_question">LISTA DE QUESTÃO</string>
    <string name="text_flow_inexistent">FLUXO INEXISTENTE. POR FAVOR ENTRAR EM CONTATO COM A TI.</string>
    <string name="text_title_question">QUESTÃO</string>
    <string name="text_option_according">CONFORME</string>
    <string name="text_option_non_compliant">NÃO CONFORME</string>
    <string name="text_title_question_obs">OBSERVAÇÃO</string>
    <string name="text_question_pos">QUESTÃO %1$s</string>
    <string name="text_question_desc">DESCR: %1$s</string>
    <string name="text_question_obs">OBS: %1$s</string>
    <string name="text_button_edit">EDITAR</string>
    <string name="text_button_close">FECHAR ITEN(S) APONTADO(S)</string>
    <string name="text_question_close_item">DESEJA REALMENTE FECHAR TODO(S) O(S) ITEM(S) APONTADO(S)?</string>
    <string name="text_item_os">OS %1$s</string>
    <string name="text_return_plant">DESEJA REALMENTE SAIR DA TELA DE PLANTA(S)? ISSO FECHARÁ TODOS OS APONTAMENTOS.</string>
    <string name="text_status_started">Aparelho sem configurações iniciais.</string>
    <string name="text_status_send">Existe dados para serem enviado</string>
    <string name="text_status_sending">Dados estão sendo enviados</string>
...
