...
import br.com.usinasantafe.pci.presenter.theme.TitleDesign
import br.com.usinasantafe.pci.presenter.theme.PCITheme
import br.com.usinasantafe.pci.presenter.theme.TextButtonDesign
import br.com.usinasantafe.pci.utils.Errors
import br.com.usinasantafe.pci.utils.OptionResp

const val TAG_OBS_TEXT_FIELD = "tag_obs_text_field"

@Composable
fun QuestionObsNoteScreen(
    viewModel: QuestionObsNoteViewModel = hiltViewModel(),
    onNavQuestionList: () -> Unit,
    onNavQuestionResp: () -> Unit
...
